[gd_scene load_steps=52 format=2]

[ext_resource path="res://Enemy/gobby_range/Gobby_range.gd" type="Script" id=1]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-1.png" type="Texture" id=2]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-3.png" type="Texture" id=4]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-4.png" type="Texture" id=5]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-5.png" type="Texture" id=6]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-6.png" type="Texture" id=7]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-7.png" type="Texture" id=8]
[ext_resource path="res://Enemy/gobby_range/sprite/idle-8.png" type="Texture" id=9]
[ext_resource path="res://Enemy/gobby_range/sprite/jump-1.png" type="Texture" id=10]
[ext_resource path="res://Enemy/gobby_range/sprite/jump-2.png" type="Texture" id=11]
[ext_resource path="res://Enemy/gobby_range/sprite/jump-3.png" type="Texture" id=12]
[ext_resource path="res://Enemy/gobby_range/sprite/jump-4.png" type="Texture" id=13]
[ext_resource path="res://Enemy/gobby_range/sprite/jump-5.png" type="Texture" id=14]
[ext_resource path="res://Enemy/gobby_range/sprite/die-1.png" type="Texture" id=15]
[ext_resource path="res://Enemy/gobby_range/sprite/die-2.png" type="Texture" id=16]
[ext_resource path="res://Enemy/gobby_range/sprite/die-3.png" type="Texture" id=17]
[ext_resource path="res://Enemy/gobby_range/sprite/die-4.png" type="Texture" id=18]
[ext_resource path="res://Enemy/gobby_range/sprite/die-5.png" type="Texture" id=19]
[ext_resource path="res://Enemy/gobby_range/sprite/die-6.png" type="Texture" id=20]
[ext_resource path="res://Enemy/gobby_range/sprite/die-7.png" type="Texture" id=21]
[ext_resource path="res://Enemy/gobby_range/sprite/die-8.png" type="Texture" id=22]
[ext_resource path="res://Enemy/gobby_range/sprite/die-9.png" type="Texture" id=23]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-1.png" type="Texture" id=24]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-2.png" type="Texture" id=25]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-3.png" type="Texture" id=26]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-4.png" type="Texture" id=27]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-5.png" type="Texture" id=28]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-6.png" type="Texture" id=29]
[ext_resource path="res://Enemy/gobby_range/sprite/attack-7.png" type="Texture" id=30]
[ext_resource path="res://Enemy/gobby_range/sprite/move-1.png" type="Texture" id=31]
[ext_resource path="res://Enemy/gobby_range/sprite/move-2.png" type="Texture" id=32]
[ext_resource path="res://Enemy/gobby_range/sprite/move-3.png" type="Texture" id=33]
[ext_resource path="res://Enemy/gobby_range/sprite/move-4.png" type="Texture" id=34]
[ext_resource path="res://Enemy/gobby_range/sprite/auch-1.png" type="Texture" id=35]
[ext_resource path="res://Enemy/gobby_range/sprite/auch-2.png" type="Texture" id=36]
[ext_resource path="res://Enemy/gobby_range/sprite/auch-3.png" type="Texture" id=37]
[ext_resource path="res://items/flame/Fogo_1.png" type="Texture" id=38]
[ext_resource path="res://items/flame/Fogo_2.png" type="Texture" id=39]
[ext_resource path="res://items/flame/Fogo_3.png" type="Texture" id=40]
[ext_resource path="res://items/flame/Fogo_4.png" type="Texture" id=41]
[ext_resource path="res://player/light.png" type="Texture" id=42]
[ext_resource path="res://Enemy/boss/level1/boss1_1/new_styleboxflat.tres" type="StyleBox" id=43]
[ext_resource path="res://Enemy/boss/level1/boss1_1/bge.tres" type="StyleBox" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "атака",
"speed": 7.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "урон",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "хотьба",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "стойка",
"speed": 7.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "смерть",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "прыжок",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.60144, 10 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40.9807, 52.8453 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 200, 10 )

[node name="Gobby_range" type="KinematicBody2D" groups=[
"paused",
"save",
]]
pause_mode = 1
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "стойка"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.429272, 6.00989 )
shape = SubResource( 2 )

[node name="flame" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 0.50621, 11.249 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="Light2D" type="Light2D" parent="flame"]
texture = ExtResource( 42 )
texture_scale = 0.8
mode = 2

[node name="flame_damage" type="Timer" parent="flame"]
wait_time = 2.5

[node name="flame_area" type="Area2D" parent="flame"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="flame/flame_area"]
shape = SubResource( 4 )
disabled = true

[node name="attack_area" type="Area2D" parent="."]
visible = false
position = Vector2( -12, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 5 )

[node name="damage" type="Area2D" parent="."]
position = Vector2( -15, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
shape = SubResource( 6 )
disabled = true

[node name="visible" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 5 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="visible"]
shape = SubResource( 7 )

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -6.0
margin_top = -18.0
margin_right = 29.0
margin_bottom = -4.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = ExtResource( 43 )
custom_styles/bg = ExtResource( 44 )
value = 100.0
percent_visible = false

[node name="check_place" type="RayCast2D" parent="."]
visible = false
position = Vector2( -9, 4 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="idletimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="damage_sound" type="AudioStreamPlayer2D" parent="."]

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]

[node name="move_sound" type="AudioStreamPlayer2D" parent="."]

[node name="music" type="AudioStreamPlayer2D" parent="."]

[node name="ouch_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="animation_finished" from="spr" to="." method="_on_spr_animation_finished"]
[connection signal="frame_changed" from="spr" to="." method="_on_spr_frame_changed"]
[connection signal="timeout" from="flame/flame_damage" to="." method="_on_flame_damage_timeout"]
[connection signal="body_entered" from="flame/flame_area" to="." method="_on_flame_area_body_entered"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="visible" to="." method="_on_visible_body_entered"]
[connection signal="body_exited" from="visible" to="." method="_on_visible_body_exited"]
[connection signal="timeout" from="idletimer" to="." method="_on_idletimer_timeout"]
[connection signal="timeout" from="ouch_timer" to="." method="_on_ouch_timer_timeout"]
